chore(deployment): 完成后端服务优化与依赖升级
- 删除多余的调试计划文档以精简项目结构
- 移除Python和Go模拟服务，统一使用Java后端服务
- 更新Dockerfile，改用openjdk:8-jre-alpine基础镜像
- 采用预构建镜像替代本地构建，简化docker-compose配置
- 升级spring-ai版本至1.0.0-M6，新增dashscope SDK依赖
- 修正依赖仓库配置，增加阿里云与Spring官方仓库
- 统一代码中List.of替换为Arrays.asList，兼容性提升
- 添加dashscope模型名称配置注入，支持动态模型切换
- 捕获NoApiKeyException替代TokenUnavailableException，完善异常处理
- 调整application.yml数据库和Redis连接配置，支持Docker网络环境
- README改为引用单独DOCKER_DEPLOYMENT.md部署说明文档