@@ -9,6 +9,8 @@ import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -67,22 +69,22 @@ public class HotspotService {
             // 模拟一些热点数据用于演示
             Hotspot hotspot1 = new Hotspot("AI技术发展趋势", "AI技术在各行业的应用越来越广泛", "抖音", 95.5);
             hotspot1.setType("科技");
-            hotspot1.setTags(List.of("AI", "科技", "未来"));
+            hotspot1.setTags(Arrays.asList("AI", "科技", "未来"));
             
             Hotspot hotspot2 = new Hotspot("夏日美食推荐", "炎炎夏日，来点清爽美食", "快手", 88.2);
             hotspot2.setType("美食");
-            hotspot2.setTags(List.of("美食", "夏日", "清爽"));
+            hotspot2.setTags(Arrays.asList("美食", "夏日", "清爽"));
             
             Hotspot hotspot3 = new Hotspot("旅行攻略分享", "国内热门旅游景点推荐", "抖音", 92.1);
             hotspot3.setType("旅游");
-            hotspot3.setTags(List.of("旅行", "攻略", "景点"));
+            hotspot3.setTags(Arrays.asList("旅行", "攻略", "景点"));
             
-            return List.of(hotspot1, hotspot2, hotspot3);
+            return Arrays.asList(hotspot1, hotspot2, hotspot3);
         } catch (Exception e) {
             // 记录日志
             System.err.println("获取热点数据失败: " + e.getMessage());
             // 返回空列表或缓存数据
-            return List.of();
+            return Collections.emptyList();
         }
     }
     
